--- a/account-registration/account-registration.gradle
+++ b/account-registration/account-registration.gradle
@@ -54,16 +54,25 @@ dependencies {
   annotationProcessor "org.projectlombok:lombok:+"
   annotationProcessor("org.pf4j:pf4j:$pf4jVersion")
 
-//   testImplementation (group: 'com.netflix.spinnaker.orca', name: 'orca-core', version: "${orcaVersion}")
+  testImplementation (group: 'com.netflix.spinnaker.orca', name: 'orca-core', version: "${orcaVersion}")
+  testImplementation 'com.netflix.spinnaker.clouddriver:clouddriver-api:5.67.0'
+  testImplementation 'com.netflix.spinnaker.clouddriver:clouddriver-aws:5.67.0'
+  testImplementation 'com.netflix.spinnaker.clouddriver:clouddriver-ecs:5.67.0'
+  testImplementation 'com.netflix.spinnaker.clouddriver:cats-core:5.67.0'
+  testImplementation 'com.netflix.spinnaker.clouddriver:clouddriver-security:5.67.0'
+  testImplementation 'com.netflix.spinnaker.clouddriver:clouddriver-eureka:5.67.0'
+  testImplementation 'com.netflix.spinnaker.clouddriver:clouddriver-core:5.67.0'
+  testImplementation "org.junit.jupiter:junit-jupiter-api:5.3.2"
+  testImplementation group: 'io.strikt', name: 'strikt-core', version: '0.22.1'
+  testImplementation group: 'dev.minutest', name: 'minutest', version: '1.10.0'
 
-//   testImplementation "org.junit.jupiter:junit-jupiter-api:5.3.2"
-//   testImplementation group: 'io.strikt', name: 'strikt-core', version: '0.22.1'
-//   testImplementation group: 'dev.minutest', name: 'minutest', version: '1.10.0'
-
-//   testRuntime "org.junit.jupiter:junit-jupiter-engine:5.3.2"
-//   testRuntime "org.junit.platform:junit-platform-launcher:1.3.2"
+  testRuntime "org.junit.jupiter:junit-jupiter-engine:5.3.2"
+  testRuntime "org.junit.platform:junit-platform-launcher:1.3.2"
 }
 
-tasks.withType(Test) {
+test {
+  testLogging {
+    events "passed", "skipped", "failed", "standardOut", "standardError"
+  }
   useJUnitPlatform()
 }
