--- a/account-registration/account-registration.gradle
+++ b/account-registration/account-registration.gradle
@@ -37,9 +37,9 @@ dependencies {
 //  compileOnly "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 //  api "org.codehaus.groovy:groovy"
   compileOnly "org.codehaus.groovy:groovy-all:+"
-  compileOnly (group: 'org.springframework', name: 'spring-context', version: '5.2.1.RELEASE')
+  compileOnly (group: 'org.springframework', name: 'spring-context', version: '5.2.4.RELEASE')
   compileOnly (group: 'com.netflix.spinnaker.kork', name: 'kork-plugins-spring-api', version: "${korkVersion}")
-  compileOnly (group: 'org.springframework', name: 'spring-web', version: '5.2.2.RELEASE')
+  compileOnly (group: 'org.springframework', name: 'spring-web', version: '5.2.4.RELEASE')
   compileOnly (group: 'com.netflix.spinnaker.orca', name: 'orca-core', version: "${orcaVersion}")
   compileOnly 'com.netflix.spinnaker.clouddriver:clouddriver-api:5.67.0'
   compileOnly 'com.netflix.spinnaker.clouddriver:clouddriver-aws:5.67.0'
@@ -65,7 +65,9 @@ dependencies {
   testImplementation "org.junit.jupiter:junit-jupiter-api:5.3.2"
   testImplementation group: 'io.strikt', name: 'strikt-core', version: '0.22.1'
   testImplementation group: 'dev.minutest', name: 'minutest', version: '1.10.0'
-
+  testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.2.5.RELEASE'
+  testImplementation (group: 'org.springframework', name: 'spring-web', version: '5.2.4.RELEASE')
+//  testImplementation (group: 'org.springframework', name: 'spring-context', version: '5.2.4.RELEASE')
   testRuntime "org.junit.jupiter:junit-jupiter-engine:5.3.2"
   testRuntime "org.junit.platform:junit-platform-launcher:1.3.2"
 }
