--- a/account-registration/account-registration.gradle
+++ b/account-registration/account-registration.gradle
@@ -34,8 +34,6 @@ spinnakerPlugin {
 
 
 dependencies {
-//  compileOnly "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-//  api "org.codehaus.groovy:groovy"
   compileOnly "org.codehaus.groovy:groovy-all:+"
   compileOnly (group: 'org.springframework', name: 'spring-context', version: '5.2.4.RELEASE')
   compileOnly (group: 'com.netflix.spinnaker.kork', name: 'kork-plugins-spring-api', version: "${korkVersion}")
@@ -51,6 +49,7 @@ dependencies {
   compileOnly 'com.netflix.spinnaker.fiat:fiat-core:1.22.0'
   compileOnly 'com.amazonaws:aws-java-sdk:1.11.802'
   compileOnly 'org.projectlombok:lombok:+'
+  compileOnly 'com.amazonaws:aws-java-sdk-core:1.11.802'
   annotationProcessor "org.projectlombok:lombok:+"
   annotationProcessor("org.pf4j:pf4j:$pf4jVersion")
 
@@ -66,8 +65,8 @@ dependencies {
   testImplementation group: 'io.strikt', name: 'strikt-core', version: '0.22.1'
   testImplementation group: 'dev.minutest', name: 'minutest', version: '1.10.0'
   testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.2.5.RELEASE'
-  testImplementation (group: 'org.springframework', name: 'spring-web', version: '5.2.4.RELEASE')
-//  testImplementation (group: 'org.springframework', name: 'spring-context', version: '5.2.4.RELEASE')
+  testImplementation group: 'org.springframework', name: 'spring-web', version: '5.2.4.RELEASE'
+  testImplementation 'com.amazonaws:aws-java-sdk-core:1.11.802'
   testRuntime "org.junit.jupiter:junit-jupiter-engine:5.3.2"
   testRuntime "org.junit.platform:junit-platform-launcher:1.3.2"
 }
