--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,4 +48,14 @@ jobs:
           asset_path: ./build/distributions/${{ steps.get_project_info.outputs.PROJECT }}-${{ steps.get_project_info.outputs.VERSION }}.zip
           asset_name: ${{ steps.get_project_info.outputs.PROJECT }}-${{ steps.get_project_info.outputs.VERSION }}.zip
           asset_content_type: application/zip 
-      
+
+      - name: upload plugin info asset
+        id: upload-plugin-info-asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url:*${{*steps.create_release.outputs.upload_url*}}*$
+          asset_path:*./build/distributions/plugin-info.json
+          asset_name: plugin-info.json
+          asset_content_type: application/json
