adjusting release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,7 +55,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url:*${{*steps.create_release.outputs.upload_url*}}*$
-          asset_path:*./build/distributions/plugin-info.json
+          upload_url: ${{ steps.create_release.outputs.upload_url}}
+          asset_path: ./build/distributions/plugin-info.json
           asset_name: plugin-info.json
           asset_content_type: application/json
