--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,9 @@ jobs:
     name: Release Plugin
     runs-on: ubuntu-latest
     steps:
+      - name: download jq
+        run: sudo apt-get install jq
+
       - name: checkout code
         uses: actions/checkout@v2
 
@@ -49,12 +52,21 @@ jobs:
           asset_name: ${{ steps.get_project_info.outputs.PROJECT }}-${{ steps.get_project_info.outputs.VERSION }}.zip
           asset_content_type: application/zip 
 
-      - name: upload plugin info asset
-        id: upload-plugin-info-asset
-        uses: armory-io/plugin-metadata-updater@master
-        env:
-          GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }} 
-        with:
-          metadata: build/distributions/plugin-info.json
-          binary_url: https://github.com/${{ steps.get_project_info.outputs.REPO }}/releases/download/${{ steps.get_project_info.outputs.VERSION }}/${{ steps.get_project_info.outputs.PROJECT }}-${{ steps.get_project_info.outputs.VERSION }}.zip
-          metadata_repo_url: https://github.com/awslabs/aws-account-registration-plugin-spinnaker
+       - name: mutate package-info.json
+         id: mutate-package-info
+         env:
+           ARTIFACT_URL: https://github.com/${{ steps.get_project_info.outputs.REPO }}/releases/download/${{ steps.get_project_info.outputs.VERSION }}/${{ steps.get_project_info.outputs.PROJECT }}-${{ steps.get_project_info.outputs.VERSION }}.zip
+         run: cat plugin-info.json | jq '.releases |= map(if .version == "v0.0.1" then . + {"url": $ARTIFACT_URL} else . end)' > ./plugin.json
+
+       - name upload package.json
+         id: upload-package-info
+         uses: actions/upload-release-asset@v1
+         env:
+           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+         with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./plugin.json
+          asset_name: plugin.json 
+          asset_content_type: application/json
+         with:
+        
