--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,7 +56,8 @@ jobs:
         id: mutate-package-info
         env:
           ARTIFACT_URL: https://github.com/${{ steps.get_project_info.outputs.REPO }}/releases/download/${{ steps.get_project_info.outputs.VERSION }}/${{ steps.get_project_info.outputs.PROJECT }}-${{ steps.get_project_info.outputs.VERSION }}.zip
-        run: cat .build/distributions/plugin-info.json | jq '.releases |= map(if .version == "v0.0.1" then . + '{"url": $ARTIFACT_URL}' else . end)' > ./plugin.json
+          PLUGIN_ENTRY: '{"url": $ARTIFACT_URL}'
+        run: cat .build/distributions/plugin-info.json | jq '.releases |= map(if .version == "v0.0.1" then . + $PLUGIN_ENTRY else . end)' > ./plugin.json
 
       - name: upload package.json
         id: upload-package-info
