--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,8 @@ jobs:
 
       - name: checkout code
         uses: actions/checkout@v2
+        with:
+          ref: 'feature/github-actions'
 
       - name: run tests
         run: ./gradlew test
