--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,14 @@ jobs:
     name: test and build
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/cache@v2
+          with:
+            path: |
+              ~/.gradle/caches
+              ~/.gradle/wrapper
+            key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
+            restore-keys: |
+              ${{ runner.os }}-gradle-
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
         with:
@@ -22,20 +30,13 @@ jobs:
         run: ./gradlew cleanTest test
       - name: Build with Gradle
         run: ./gradlew releaseBundle
-      - uses: actions/cache@v2
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
       - name: Get zip path
         id: zip_path
         run: |
           a=$(find build/distributions/ -name '*.zip')
           echo "::set-output name=zip_path::$a"
           ls -lhaR
+          ls -lh build/distributions/
       - name: Upload bundle
         uses: actions/upload-artifact@v1
         with:
