--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,8 +35,6 @@ jobs:
         run: |
           a=$(find build/distributions/ -name '*.zip')
           echo "::set-output name=zip_path::$a"
-          ls -lhaR
-          ls -lh build/distributions/
       - name: Upload bundle
         uses: actions/upload-artifact@v2
         with:
@@ -52,7 +50,8 @@ jobs:
     steps:
       - name: test
         run: echo ${{needs.build.outputs.zip_path}}
-#      - uses: actions/download-artifact@v2
-#        with:
-#          name: my-artifact
-#          path: path/to/artifact
+      - uses: actions/download-artifact@v2
+        with:
+          name: bundle
+      - name: test1
+        run: ls -lha
