--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,7 @@ jobs:
       - name: Build docker image
         run: |
           docker build --build-arg targetVersion=1.22.0 --build-arg pluginFile=${{needs.build.outputs.zip_path}} \
-          -f .github/integration-testing/Dockerfile_bake_plugin -t test:plugin
+          -f .github/integration-testing/Dockerfile_bake_plugin -t test:plugin . 
       - name: Run clouddriver
         run: |
           docker run -d --network=host --mount type=bind,src="$(pwd)"/.github/integration-testing/config,target=/opt/spinnaker/config test:plugin
