--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,6 +63,7 @@ jobs:
           docker run -d --network=host --mount type=bind,src="$(pwd)"/.github/integration-testing/config,target=/opt/spinnaker/config test:plugin
       - name: Prepare mock server
         run: |
+          wget https://golang.org/dl/go1.15.1.linux-amd64.tar.gz -O go.tar.gz
           sudo add-apt-repository ppa:longsleep/golang-backports
           sudo apt update
           sudo apt install golang-go curl
