--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,55 +12,55 @@ jobs:
     name: test and build
     steps:
       - uses: actions/checkout@v2
-#      - uses: actions/cache@v2
-#        with:
-#          path: |
-#            ~/.gradle/caches
-#            ~/.gradle/wrapper
-#          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
-#          restore-keys: |
-#            ${{ runner.os }}-gradle-
-#      - name: Set up JDK 1.8
-#        uses: actions/setup-java@v1
-#        with:
-#          java-version: 1.8
-#      - name: Grant execute permission for gradlew
-#        run: chmod +x gradlew
-#      - name: Run unit tests
-#        run: ./gradlew cleanTest test
-#      - name: Build with Gradle
-#        run: ./gradlew releaseBundle
-#      - name: Get zip path
-#        id: zip_path
-#        run: |
-#          a=$(find build/distributions/ -name '*.zip' -printf "%f")
-#          echo "::set-output name=zip_path::$a"
-#      - name: Upload bundle
-#        uses: actions/upload-artifact@v2
-#        with:
-#          name: bundle
-#          path: build/distributions/*.zip
-#          if-no-files-found: error
-#    outputs:
-#      zip_path: ${{ steps.zip_path.outputs.zip_path }}
+      - uses: actions/cache@v2
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+      - name: Run unit tests
+        run: ./gradlew cleanTest test
+      - name: Build with Gradle
+        run: ./gradlew releaseBundle
+      - name: Get zip path
+        id: zip_path
+        run: |
+          a=$(find build/distributions/ -name '*.zip' -printf "%f")
+          echo "::set-output name=zip_path::$a"
+      - name: Upload bundle
+        uses: actions/upload-artifact@v2
+        with:
+          name: bundle
+          path: build/distributions/*.zip
+          if-no-files-found: error
+    outputs:
+      zip_path: ${{ steps.zip_path.outputs.zip_path }}
   test:
     runs-on: ubuntu-latest
     needs: build
     name: integration test
     steps:
       - uses: actions/checkout@v2
-#      - name: test
-#        run: echo ${{needs.build.outputs.zip_path}}
-#      - uses: actions/download-artifact@v2
-#        with:
-#          name: bundle
-#      - name: Build docker image
-#        run: |
-#          docker build --build-arg targetVersion=1.22.0 --build-arg pluginFile=${{needs.build.outputs.zip_path}} \
-#          -f .github/integration-testing/Dockerfile_bake_plugin -t test:plugin .
-#      - name: Run clouddriver
-#        run: |
-#          docker run -d --network=host --mount type=bind,src="$(pwd)"/.github/integration-testing/config,target=/opt/spinnaker/config test:plugin
+      - name: test
+        run: echo ${{needs.build.outputs.zip_path}}
+      - uses: actions/download-artifact@v2
+        with:
+          name: bundle
+      - name: Build docker image
+        run: |
+          docker build --build-arg targetVersion=1.22.0 --build-arg pluginFile=${{needs.build.outputs.zip_path}} \
+          -f .github/integration-testing/Dockerfile_bake_plugin -t test:plugin .
+      - name: Run clouddriver
+        run: |
+          docker run -d --network=host --mount type=bind,src="$(pwd)"/.github/integration-testing/config,target=/opt/spinnaker/config test:plugin
       - name: Prepare mock server
         run: |
           wget https://golang.org/dl/go1.15.1.linux-amd64.tar.gz -O go.tar.gz
@@ -76,6 +76,7 @@ jobs:
           while ! nc -z localhost 8080; do
             sleep 3
           done
+          slee 3
       - name: Check mock server
         run: |
           curl localhost:8080/hello
