--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,6 +60,9 @@ jobs:
           docker build --build-arg targetVersion=1.22.0 --build-arg pluginFile=${{needs.build.outputs.zip_path}} \
           -f .github/integration-testing/Dockerfile_bake_plugin -t test:plugin .
       - name: Run clouddriver
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY }}
         run: |
           docker run -d --network=host --mount type=bind,src="$(pwd)"/.github/integration-testing/config,target=/opt/spinnaker/config test:plugin
       - name: Prepare mock server
@@ -67,7 +70,7 @@ jobs:
           wget -q https://golang.org/dl/go1.15.1.linux-amd64.tar.gz -O go.tar.gz
           sudo tar -C /usr/local -xzf go.tar.gz
           echo "::set-env name=PATH::$PATH:/usr/local/go/bin"
-          sudo apt install netcat curl wget -y
+          sudo apt update && sudo apt install netcat curl wget -y
       - name: Run mock server
         working-directory: .github/integration-testing/mock-server
         timeout-minutes: 5
@@ -78,10 +81,10 @@ jobs:
             sleep 3
           done
           sleep 3
-#      - name: Check mock server
-#        run: |
-#          curl localhost:8080/hello
-#          curl localhost:7002/credentials
+      - name: Check mock server
+        run: |
+          curl localhost:8080/hello
+          curl localhost:7002/credentials
 
 
 
