--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,17 +97,17 @@ jobs:
           cp response-remove-ecs.json response.json
           sleep 15
           count=$(curl -s localhost:7002/credentials | jq '.[] | select(.name == "account-3-ecs") | [{name}] | length')
-          if [[ -z $count ]]; then echo "account-3-ecs not removed." && exit 1; fi
+          if ! [[ -z $count ]]; then echo "account-3-ecs not removed." && exit 1; fi
           curl -s localhost:7002/credentials | jq -e '.[] | select(.name == "account-3")'
           cp response-remove.json response.json
           sleep 15
           count=$(curl -s localhost:7002/credentials | jq '.[] | select(.name == "account-3") | [{name}] | length')
-          if [[ -z $count ]]; then echo "account-3 not removed." && exit 1; fi
+          if ! [[ -z $count ]]; then echo "account-3 not removed." && exit 1; fi
           curl -s localhost:7002/credentials | jq -e '.[] | select(.name == "default")'
           cp response-remove-default.json response.json
           sleep 15
           count=$(curl -s localhost:7002/credentials | jq '.[] | select(.name == "default") | [{name}] | length')
-          if [[ -z $count ]]; then echo "default not removed." && exit 1; fi
+          if ! [[ -z $count ]]; then echo "default not removed." && exit 1; fi
 
 
 
