--- a/account-registration/account-registration.gradle
+++ b/account-registration/account-registration.gradle
@@ -39,13 +39,14 @@ dependencies {
   compileOnly (group: 'com.netflix.spinnaker.kork', name: 'kork-plugins-spring-api', version: "${korkVersion}")
   compileOnly (group: 'org.springframework', name: 'spring-web', version: '5.2.4.RELEASE')
   compileOnly (group: 'com.netflix.spinnaker.orca', name: 'orca-core', version: "${orcaVersion}")
-  compileOnly 'com.netflix.spinnaker.clouddriver:clouddriver-api:5.67.0'
-  compileOnly 'com.netflix.spinnaker.clouddriver:clouddriver-aws:5.67.0'
-  compileOnly 'com.netflix.spinnaker.clouddriver:clouddriver-ecs:5.67.0'
-  compileOnly 'com.netflix.spinnaker.clouddriver:cats-core:5.67.0'
-  compileOnly 'com.netflix.spinnaker.clouddriver:clouddriver-security:5.67.0'
-  compileOnly 'com.netflix.spinnaker.clouddriver:clouddriver-eureka:5.67.0'
-  compileOnly 'com.netflix.spinnaker.clouddriver:clouddriver-core:5.67.0'
+  compileOnly "com.netflix.spinnaker.clouddriver:clouddriver-api:${clouddriverVersion}"
+  compileOnly "com.netflix.spinnaker.clouddriver:clouddriver-aws:${clouddriverVersion}"
+  compileOnly "com.netflix.spinnaker.clouddriver:clouddriver-ecs:${clouddriverVersion}"
+  compileOnly "com.netflix.spinnaker.clouddriver:clouddriver-lambda:${clouddriverVersion}"
+  compileOnly "com.netflix.spinnaker.clouddriver:cats-core:${clouddriverVersion}"
+  compileOnly "com.netflix.spinnaker.clouddriver:clouddriver-security:${clouddriverVersion}"
+  compileOnly "com.netflix.spinnaker.clouddriver:clouddriver-eureka:${clouddriverVersion}"
+  compileOnly "com.netflix.spinnaker.clouddriver:clouddriver-core:${clouddriverVersion}"
   compileOnly 'com.netflix.spinnaker.fiat:fiat-core:1.22.0'
   compileOnly 'com.amazonaws:aws-java-sdk:1.11.802'
   compileOnly 'org.projectlombok:lombok:+'
@@ -54,13 +55,13 @@ dependencies {
   annotationProcessor("org.pf4j:pf4j:$pf4jVersion")
 
   testImplementation (group: 'com.netflix.spinnaker.orca', name: 'orca-core', version: "${orcaVersion}")
-  testImplementation 'com.netflix.spinnaker.clouddriver:clouddriver-api:5.67.0'
-  testImplementation 'com.netflix.spinnaker.clouddriver:clouddriver-aws:5.67.0'
-  testImplementation 'com.netflix.spinnaker.clouddriver:clouddriver-ecs:5.67.0'
-  testImplementation 'com.netflix.spinnaker.clouddriver:cats-core:5.67.0'
-  testImplementation 'com.netflix.spinnaker.clouddriver:clouddriver-security:5.67.0'
-  testImplementation 'com.netflix.spinnaker.clouddriver:clouddriver-eureka:5.67.0'
-  testImplementation 'com.netflix.spinnaker.clouddriver:clouddriver-core:5.67.0'
+  testImplementation "com.netflix.spinnaker.clouddriver:clouddriver-api:${clouddriverVersion}"
+  testImplementation "com.netflix.spinnaker.clouddriver:clouddriver-aws:${clouddriverVersion}"
+  testImplementation "com.netflix.spinnaker.clouddriver:clouddriver-ecs:${clouddriverVersion}"
+  testImplementation "com.netflix.spinnaker.clouddriver:cats-core:${clouddriverVersion}"
+  testImplementation "com.netflix.spinnaker.clouddriver:clouddriver-security:${clouddriverVersion}"
+  testImplementation "com.netflix.spinnaker.clouddriver:clouddriver-eureka:${clouddriverVersion}"
+  testImplementation "com.netflix.spinnaker.clouddriver:clouddriver-core:${clouddriverVersion}"
   testImplementation 'com.netflix.spinnaker.fiat:fiat-core:1.22.0'
   testImplementation "org.junit.jupiter:junit-jupiter-api:5.3.2"
   testImplementation group: 'io.strikt', name: 'strikt-core', version: '0.22.1'
