--- a/gradle.properties
+++ b/gradle.properties
@@ -4,4 +4,4 @@ spinnakerGradleVersion=7.11.6
 pf4jVersion=3.2.0
 korkVersion=7.42.8
 orcaVersion=8.8.0
-clouddriverVersion=5.69.0
+clouddriverVersion=7.1.0-20201021200017
