--- a/account-registration/account-registration.gradle
+++ b/account-registration/account-registration.gradle
@@ -1,30 +1,19 @@
-buildscript {
-  ext.kotlin_version = '1.3.50'
 
-  repositories {
-    mavenCentral()
-  }
-  dependencies {
-//    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-  }
-}
 apply plugin: "io.spinnaker.plugin.service-extension"
-//apply plugin: "maven-publish"
-apply plugin: 'groovy'
 apply plugin: 'java'
-//apply plugin: 'kotlin-kapt'
+apply plugin: "groovy"
 
 sourceCompatibility = 11
 targetCompatibility = 11
 
 repositories {
+  mavenLocal()
   mavenCentral()
   jcenter()
   maven { url "http://dl.bintray.com/spinnaker-releases/jars/" }
 }
 
-sourceSets.main.java.srcDirs = []
-sourceSets.main.groovy.srcDirs += ["src/main/java"]
+sourceSets.main.java.srcDirs = ["src/main/java"]
 
 spinnakerPlugin {
   serviceName = "clouddriver"
@@ -34,11 +23,11 @@ spinnakerPlugin {
 
 
 dependencies {
+  implementation "com.google.guava:guava:30.0-jre"
   compileOnly "org.codehaus.groovy:groovy-all:+"
   compileOnly (group: 'org.springframework', name: 'spring-context', version: '5.2.4.RELEASE')
   compileOnly (group: 'com.netflix.spinnaker.kork', name: 'kork-plugins-spring-api', version: "${korkVersion}")
   compileOnly (group: 'org.springframework', name: 'spring-web', version: '5.2.4.RELEASE')
-  compileOnly (group: 'com.netflix.spinnaker.orca', name: 'orca-core', version: "${orcaVersion}")
   compileOnly "com.netflix.spinnaker.clouddriver:clouddriver-api:${clouddriverVersion}"
   compileOnly "com.netflix.spinnaker.clouddriver:clouddriver-aws:${clouddriverVersion}"
   compileOnly "com.netflix.spinnaker.clouddriver:clouddriver-ecs:${clouddriverVersion}"
@@ -54,7 +43,6 @@ dependencies {
   annotationProcessor "org.projectlombok:lombok:+"
   annotationProcessor("org.pf4j:pf4j:$pf4jVersion")
 
-  testImplementation (group: 'com.netflix.spinnaker.orca', name: 'orca-core', version: "${orcaVersion}")
   testImplementation "com.netflix.spinnaker.clouddriver:clouddriver-api:${clouddriverVersion}"
   testImplementation "com.netflix.spinnaker.clouddriver:clouddriver-aws:${clouddriverVersion}"
   testImplementation "com.netflix.spinnaker.clouddriver:clouddriver-ecs:${clouddriverVersion}"
@@ -63,19 +51,20 @@ dependencies {
   testImplementation "com.netflix.spinnaker.clouddriver:clouddriver-eureka:${clouddriverVersion}"
   testImplementation "com.netflix.spinnaker.clouddriver:clouddriver-core:${clouddriverVersion}"
   testImplementation 'com.netflix.spinnaker.fiat:fiat-core:1.22.0'
-  testImplementation "org.junit.jupiter:junit-jupiter-api:5.3.2"
   testImplementation group: 'io.strikt', name: 'strikt-core', version: '0.22.1'
   testImplementation group: 'dev.minutest', name: 'minutest', version: '1.10.0'
   testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.2.5.RELEASE'
   testImplementation group: 'org.springframework', name: 'spring-web', version: '5.2.4.RELEASE'
   testImplementation 'com.amazonaws:aws-java-sdk-core:1.11.802'
-  testRuntime "org.junit.jupiter:junit-jupiter-engine:5.3.2"
-  testRuntime "org.junit.platform:junit-platform-launcher:1.3.2"
+  compile "org.codehaus.groovy:groovy:2.5.13"
+  testCompile platform("org.spockframework:spock-bom:2.0-M3-groovy-2.5")
+  testCompile "org.spockframework:spock-core"
+
 }
 
 test {
+  useJUnitPlatform()
   testLogging {
     events "passed", "skipped", "failed", "standardOut", "standardError"
   }
-  useJUnitPlatform()
 }
