--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 # org.gradle.parallel=true
-version=1.1.0
-spinnakerGradleVersion=8.10.0
+version=1.2.0
+spinnakerGradleVersion=8.12.0
 pf4jVersion=3.2.0
-korkVersion=7.85.0
-clouddriverVersion=7.1.0-20201106170304
+korkVersion=7.110.0
+clouddriverVersion=5.74.0
+fiatVersion=1.28.0
